View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027821 | Open CASCADE | OCCT:Visualization | public | 2016-08-29 16:58 | 2016-12-09 16:39 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027821: Visualization, AIS_Shape - add NULL checks for displaying TopoDS_Face with NULL surface | ||||
Description | Standard presentation tools used by AIS_Shape might cause NULL-dereference when displaying TopoDS_Face with NULL surface. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug27821 | ||||
|
Branch CR27821 has been created by kgv. SHA-1: 3b6a2f9cd6413e9d2bac035773b88800df60a491 Detailed log of new commits: Author: akz Date: Fri Aug 5 11:24:58 2016 +0300 0027821: Visualization, AIS_Shape - add NULL checks for displaying TopoDS_Face with NULL surface NULL surface |
|
Branch CR27821 has been updated forcibly by kgv. SHA-1: 3d8de2b8e4b0d2348e6c8cee698332d76d0ffba1 |
|
Branch CR27821 has been updated forcibly by kgv. SHA-1: f65b6906fc44ce7174f1adbcc066d0e059bd197f |
|
Patch is ready for testing. |
|
New data is temporarily at \\VIRTEX\dn43\occt_tests_data\INCOMING\ |
|
Dear BugMaster, Branch CR27821 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: f65b6906fc44ce7174f1adbcc066d0e059bd197f Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1145 Regressions/Differences: Not detected Testing cases: bugs vis bug27821 - FAILED http://occt-tests/CR27821-master-OCCT/Debian70-64/bugs/vis/bug27821.html http://occt-tests/CR27821-master-OCCT/Windows-64-VC10/bugs/vis/bug27821.html Testing on Linux: Total MEMORY difference: 89695025 / 89952196 [-0.29%] Total CPU difference: 19326.470000000074 / 19309.729999999934 [+0.09%] Testing on Windows: Total MEMORY difference: 57089116 / 57107084 [-0.03%] Total CPU difference: 17864.12691289886 / 18053.73052829886 [-1.05%] |
|
Dear Kirill, Branch CR27821 has been rejected due to: - failed test-case for issue |
|
> brestore D:/occt_tests_data/public/brep/bug27821_nullsurf.brep n How it is possible that in test case the variable "s" became "n" in your test report? +restore [locate_data_file bug27821_nullsurf.brep] s |
|
Shape bug27821_nullsurf.brep is stored in variable s. Symbol "n" is artefact of output for restore/brestore command. You can check this fact by view any other test (e.g. bugs vis bug25178). |
|
Branch CR27821 has been updated forcibly by kgv. SHA-1: c4efefccdb6507e53cda392db459d422118885df |
|
Test case has been corrected - please check. |
|
Testing cases: bugs vis bug27821 - OK http://occt-tests/CR27821-master-OCCT/Debian70-64/bugs/vis/bug27821.html http://occt-tests/CR27821-master-OCCT/Windows-64-VC10/bugs/vis/bug27821.html |
|
Branch CR27821 has been deleted by kgv. SHA-1: c4efefccdb6507e53cda392db459d422118885df |
occt: master 413b1c1a 2016-08-05 08:24:58
Committer: bugmaster Details Diff |
0027821: Visualization, AIS_Shape - add NULL checks for displaying TopoDS_Face with NULL surface NULL surface |
Affected Issues 0027821 |
|
mod - src/BRepAdaptor/BRepAdaptor_Surface.cxx | Diff File | ||
mod - src/BRepTools/BRepTools.cxx | Diff File | ||
mod - src/Prs3d/Prs3d_ShapeTool.cxx | Diff File | ||
mod - src/StdPrs/StdPrs_Isolines.cxx | Diff File | ||
mod - src/StdPrs/StdPrs_WFShape.cxx | Diff File | ||
add - tests/bugs/vis/bug27821 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-08-29 16:58 | kgv | New Issue | |
2016-08-29 16:58 | kgv | Assigned To | => kgv |
2016-08-29 16:58 | git | Note Added: 0057259 | |
2016-08-29 17:45 | git | Note Added: 0057265 | |
2016-08-29 17:58 | git | Note Added: 0057266 | |
2016-08-29 18:00 | kgv | Note Added: 0057267 | |
2016-08-29 18:00 | kgv | Assigned To | kgv => bugmaster |
2016-08-29 18:00 | kgv | Status | new => resolved |
2016-08-29 18:01 | kgv | Note Added: 0057268 | |
2016-08-29 18:01 | kgv | Status | resolved => reviewed |
2016-08-29 18:50 |
|
Assigned To | bugmaster => apv |
2016-08-30 12:29 |
|
Test case number | => bugs vis bug27821 |
2016-08-30 13:18 |
|
Note Added: 0057290 | |
2016-08-30 13:18 |
|
Assigned To | apv => kgv |
2016-08-30 13:18 |
|
Status | reviewed => assigned |
2016-08-30 13:18 |
|
Note Added: 0057291 | |
2016-08-30 13:26 | kgv | Note Added: 0057292 | |
2016-08-30 13:26 | kgv | Assigned To | kgv => bugmaster |
2016-08-30 13:26 | kgv | Status | assigned => feedback |
2016-08-30 14:39 | kgv | Assigned To | bugmaster => apv |
2016-08-30 19:23 |
|
Assigned To | apv => kgv |
2016-08-30 19:30 |
|
Note Added: 0057308 | |
2016-08-30 19:36 | git | Note Added: 0057309 | |
2016-08-30 19:36 | kgv | Note Added: 0057310 | |
2016-08-30 19:36 | kgv | Assigned To | kgv => bugmaster |
2016-08-31 08:18 |
|
Assigned To | bugmaster => apv |
2016-08-31 14:57 |
|
Note Added: 0057344 | |
2016-08-31 14:57 |
|
Assigned To | apv => bugmaster |
2016-08-31 14:57 |
|
Status | feedback => tested |
2016-09-02 10:27 | bugmaster | Changeset attached | => occt master 413b1c1a |
2016-09-02 10:27 | bugmaster | Status | tested => verified |
2016-09-02 10:27 | bugmaster | Resolution | open => fixed |
2016-09-03 19:06 | kgv | Relationship added | related to 0027835 |
2016-10-22 18:23 | kgv | Relationship added | related to 0027991 |
2016-10-28 21:48 | git | Note Added: 0059575 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |